--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -3,12 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <title><ui:insert name="title">Default Title</ui:insert></title>
         <h:outputStylesheet library="css" name="jsfcrud.css"/>
         <h:outputScript library="js" name="jsfcrud.js"/>
+        <f:metadata>
+            <f:event type="preRenderView" listener="#{usuarioController.validarSesion()}"></f:event>
+        </f:metadata>
     </h:head>
 
     <h:body>
@@ -17,16 +21,18 @@
 
         <p:layout fullPage="true">
             <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">
-                Hola
+                <h:form>
+                    <p:commandLink value="Cerrar Sesion" actionListener="#{usuarioController.cerrarSesion()}"/>  
+                </h:form>
                 <h:form id="menuForm">
                     <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/template" icon="ui-icon-home"/>
+                        <p:menuitem value="#{bundle.Home}" outcome="/template" icon="ui-icon-home"/> 
                         <p:submenu label="#{bundle.Maintenance}">
                             <p:menuitem value="Cliente" outcome="/Vistas/cliente/List.xhtml" />
                             <p:menuitem value="Suscripcion" outcome="/Vistas/suscripcion/List.xhtml" />
                             <p:menuitem value="Usuario" outcome="/Vistas/usuario/List.xhtml" />
                         </p:submenu>
-                    </p:menubar>
+                    </p:menubar>                 
                 </h:form>
             </p:layoutUnit>
 
