--- a/web/Vistas/suscripcion/Create.xhtml
+++ b/web/Vistas/suscripcion/Create.xhtml
@@ -10,19 +10,21 @@
 
         <p:dialog id="SuscripcionCreateDlg" widgetVar="SuscripcionCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateSuscripcionTitle}">
             <h:form id="SuscripcionCreateForm">
+                <input type="hidden" value="#{suscripcionController.fechaActual}"></input>
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{suscripcionController.selected != null}">
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" for="fechaInicio" />
-                        <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button"/>
+                        <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}" readonlyInput="true" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" for="fechaFin" />
-                        <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaFin}" title="#{bundle.EditSuscripcionTitle_fechaFin}"  showOn="button"/>
+                        <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaFin}" title="#{bundle.EditSuscripcionTitle_fechaFin}" readonlyInput="true" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_estado}" for="estado" />
                         <p:selectBooleanCheckbox id="estado" value="#{suscripcionController.selected.estado}" />
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_clienteIdCliente}" for="clienteIdCliente" />
                         <p:selectOneMenu id="clienteIdCliente" value="#{suscripcionController.selected.clienteIdCliente}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
                             <f:selectItems value="#{clienteController.itemsAvailableSelectOne}"
                                            var="clienteIdClienteItem"
-                                           itemValue="#{clienteIdClienteItem}"/>
+                                           itemValue="#{clienteIdClienteItem}"
+                                           itemLabel="#{clienteIdClienteItem.nombres}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{suscripcionController.create}" value="#{bundle.Save}" update="display,:SuscripcionListForm:datalist,:growl" oncomplete="handleSubmit(args,'SuscripcionCreateDialog');"/>
