--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -26,7 +26,7 @@
                 </h:form>
                 <h:form id="menuForm">
                     <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/template" icon="ui-icon-home"/> 
+                        <p:menuitem value="#{bundle.Home}" outcome="/home" icon="ui-icon-home"/> 
                         <p:submenu label="#{bundle.Maintenance}">
                             <p:menuitem value="Cliente" outcome="/Vistas/cliente/List.xhtml" />
                             <p:menuitem value="Suscripcion" outcome="/Vistas/suscripcion/List.xhtml" />
