--- a/web/Vistas/suscripcion/Edit.xhtml
+++ b/web/Vistas/suscripcion/Edit.xhtml
@@ -13,9 +13,9 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{suscripcionController.selected != null}">
                         <p:outputLabel value="#{bundle.EditSuscripcionLabel_fechaInicio}" for="fechaInicio" />
-                        <p:calendar id="fechaInicio" pattern="MM/dd/yyyy" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button"/>
+                        <p:calendar id="fechaInicio" pattern="yyyy/MM/dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" effect="fold" locale="es"/>
                         <p:outputLabel value="#{bundle.EditSuscripcionLabel_fechaFin}" for="fechaFin" />
-                        <p:calendar id="fechaFin" pattern="MM/dd/yyyy" value="#{suscripcionController.selected.fechaFin}" title="#{bundle.EditSuscripcionTitle_fechaFin}"  showOn="button"/>
+                        <p:calendar id="fechaFin" pattern="yyyy/MM/dd" value="#{suscripcionController.selected.fechaFin}" title="#{bundle.EditSuscripcionTitle_fechaFin}"  showOn="button" effect="fold" locale="es"/>
                         <p:outputLabel value="#{bundle.EditSuscripcionLabel_estado}" for="estado" />
                         <p:selectBooleanCheckbox id="estado" value="#{suscripcionController.selected.estado}" />
                         <p:outputLabel value="#{bundle.EditSuscripcionLabel_clienteIdCliente}" for="clienteIdCliente" />
@@ -23,7 +23,8 @@
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{clienteController.itemsAvailableSelectOne}"
                                            var="clienteIdClienteItem"
-                                           itemValue="#{clienteIdClienteItem}"/>
+                                           itemValue="#{clienteIdClienteItem}"
+                                           itemLabel="#{clienteIdClienteItem.nombres} #{clienteIdClienteItem.apellidos}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{suscripcionController.update}" value="#{bundle.Save}" update="display,:SuscripcionListForm:datalist,:growl" oncomplete="handleSubmit(args, 'SuscripcionEditDialog');"/>
