--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -12,7 +12,8 @@
         <h:outputScript library="js" name="jsfcrud.js"/>
         <f:metadata>
             <f:event type="preRenderView" listener="#{usuarioController.validarSesion()}"></f:event>
-        </f:metadata>
+        </f:metadata>  
+        <script src="../../resources/js/patrondelenguaje.js"></script>
     </h:head>
 
     <h:body>
