--- a/web/Vistas/cliente/Edit.xhtml
+++ b/web/Vistas/cliente/Edit.xhtml
@@ -20,8 +20,8 @@
                         <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.EditClienteTitle_nombres}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_nombres}"/>
                         <p:outputLabel value="#{bundle.EditClienteLabel_apellidos}" for="apellidos" />
                         <p:inputText id="apellidos" value="#{clienteController.selected.apellidos}" title="#{bundle.EditClienteTitle_apellidos}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_apellidos}"/>
-                        <p:outputLabel value="#{bundle.EditClienteLabel_terminoSuscripcion}" for="terminoSuscripcion" />
-                        <p:inputText id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" title="#{bundle.EditClienteTitle_terminoSuscripcion}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_terminoSuscripcion}"/>
+                        <p:outputLabel value="#{bundle.EditClienteLabel_terminoSuscripcion}" for="terminoSuscripcion"/>
+                        <p:inputText id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" title="#{bundle.EditClienteTitle_terminoSuscripcion}" readonly="true" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_terminoSuscripcion}"/>
                         <p:outputLabel value="#{bundle.EditClienteLabel_identificacion}" for="identificacion" />
                         <p:inputText id="identificacion" value="#{clienteController.selected.identificacion}" title="#{bundle.EditClienteTitle_identificacion}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_identificacion}"/>
                         <p:outputLabel value="#{bundle.EditClienteLabel_direccion}" for="direccion" />
