--- a/web/Vistas/suscripcion/List.xhtml
+++ b/web/Vistas/suscripcion/List.xhtml
@@ -31,7 +31,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSuscripcionTitle_clienteIdCliente}"/>
                             </f:facet>
-                            <h:outputText value="#{item.clienteIdCliente.nombres}"/>
+                            <h:outputText value="#{item.clienteIdCliente.nombres} #{item.clienteIdCliente.apellidos}"/>
                         </p:column>
                         
                         <p:column>
