--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -10,10 +10,9 @@
 
         <p:dialog id="ClienteCreateDlg" widgetVar="ClienteCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateClienteTitle}">
             <h:form id="ClienteCreateForm">
-                  <input type="hidden" value="#{suscripcionController.fechaActual}"></input>
-                  <input id="fechaFinal" type="hidden" value="#{suscripcionController.getFechaFinal(clienteController.selected.terminoSuscripcion, suscripcionController.selected.fechaInicio)}">
-                      <p:ajax event="keyup" update="fechaFin" listener="#{suscripcionController.selected.fechaFin}"/>
-                  </input>
+                <input type="hidden" value="#{clienteController.fechaActual}"></input>
+                <input id="fechaFinal" type="hidden" value="#{suscripcionController.getFechaFinal(clienteController.selected.terminoSuscripcion, suscripcionController.selected.fechaInicio)}">
+                </input>
                 <h:panelGroup id="display">
                     <p:fieldset legend="Datos del Cliente">
                         <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
@@ -43,15 +42,15 @@
                         </p:panelGrid>
                     </p:fieldset>
 
-                   <p:fieldset legend="Datos de Suscripcion">
+                    <p:fieldset legend="Datos de Suscripcion">
                         <p:panelGrid columns="2">
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" />
-                            <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" readonlyInput="true" effect="fold" locale="es"/>               
+                            <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" readonlyInput="true" effect="fold" locale="es"/>               
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" />
-                            <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaFin}" readonlyInput="true" showOn="button" effect="fold" locale="es"/> 
+                            <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" readonlyInput="true" showOn="button" effect="fold" locale="es"/> 
                         </p:panelGrid>
                     </p:fieldset>  
-                    <p:commandButton actionListener="#{clienteController.create()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');"/>
+                    <p:commandButton actionListener="#{clienteController.crear()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
