--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -11,11 +11,11 @@
         <p:dialog id="ClienteCreateDlg" widgetVar="ClienteCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateClienteTitle}">
             <h:form id="ClienteCreateForm">
                 <input type="hidden" value="#{clienteController.fechaActual}"></input>
-                <input id="fechaFinal" type="hidden" value="#{suscripcionController.getFechaFinal(clienteController.selected.terminoSuscripcion, suscripcionController.selected.fechaInicio)}">
-                </input>
-                <h:panelGroup id="display">
+                <!--<input type="hidden" value="#{clienteController.fechaFinal}"></input>-->
+                <h:panelGroup id="display" >
                     <p:fieldset legend="Datos del Cliente">
-                        <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
+                        <h:panelGrid columns="2" rendered="#{clienteController.selected != null}">
+
                             <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto" />
                             <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.CreateClienteTitle_foto}" /> 
                             <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
@@ -25,12 +25,13 @@
 
                             <p:outputLabel value="#{bundle.CreateClienteLabel_terminoSuscripcion}" for="terminoSuscripcion" />
                             <p:selectOneMenu id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
+
+                                <p:ajax listener="#{clienteController.fechaFinal}" update="fechaFin" />
                                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                                 <f:selectItem itemLabel="Un Mes" itemValue="Un Mes" />
                                 <f:selectItem itemLabel="Dos Meses" itemValue="Dos Meses" />
                                 <f:selectItem itemLabel="Tres Meses" itemValue="Tres Meses" />
                                 <f:selectItem itemLabel="Seis Meses" itemValue="Seis Meses" />
-                                <p:ajax event="keyup" update="fechaFinal" listener="#{suscripcionController.getFechaFinal('Tres Meses', suscripcionController.selected.fechaInicio)}" />
                             </p:selectOneMenu>
 
                             <p:outputLabel value="#{bundle.CreateClienteLabel_identificacion}" for="identificacion" />
@@ -39,17 +40,21 @@
                             <p:inputText id="direccion" value="#{clienteController.selected.direccion}" title="#{bundle.CreateClienteTitle_direccion}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_direccion}"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_telefono}" for="telefono" />
                             <p:inputText id="telefono" value="#{clienteController.selected.telefono}" title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}"/>
-                        </p:panelGrid>
+
+                        </h:panelGrid> 
                     </p:fieldset>
 
-                    <p:fieldset legend="Datos de Suscripcion">
+                    <p:fieldset legend="Datos de suscripcion">
                         <p:panelGrid columns="2">
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" />
-                            <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" readonlyInput="true" effect="fold" locale="es"/>               
+                            <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" readonlyInput="true" effect="fold" locale="es">
+                                <p:ajax event="dateSelect" listener="#{clienteController.fechaFinal}" update="fechaFin" />
+                            </p:calendar>               
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" />
-                            <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" readonlyInput="true" showOn="button" effect="fold" locale="es"/> 
+                            <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" readonlyInput="true" showOn="button" effect="fold" locale="es"></p:calendar> 
                         </p:panelGrid>
                     </p:fieldset>  
+
                     <p:commandButton actionListener="#{clienteController.crear()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
                 </h:panelGroup>
