--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -17,7 +17,8 @@
                         <h:panelGrid columns="2" rendered="#{clienteController.selected != null}">
 
                             <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto" />
-                            <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.CreateClienteTitle_foto}" /> 
+                            <p:fileUpload id="foto" validator="#{clienteController.validarFoto}" multiple="false" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"  value="#{clienteController.selected.foto}" required="true" mode="simple"/>
+                          <!--  <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.CreateClienteTitle_foto}" /> -->
                             <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
                             <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" />
@@ -25,7 +26,6 @@
 
                             <p:outputLabel value="#{bundle.CreateClienteLabel_terminoSuscripcion}" for="terminoSuscripcion" />
                             <p:selectOneMenu id="terminoSuscripcion" value="#{clienteController.selected.terminoSuscripcion}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
-
                                 <p:ajax listener="#{clienteController.fechaFinal}" update="fechaFin" />
                                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                                 <f:selectItem itemLabel="Un Mes" itemValue="Un Mes" />
