--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -43,7 +43,9 @@
             </p:layoutUnit>
 
             <p:layoutUnit position="center">
-                <ui:insert name="body"/>
+                
+                <ui:insert name="body">
+                </ui:insert>
             </p:layoutUnit>
        
         </p:layout>
